--- a/css-compiled/particles.css
+++ b/css-compiled/particles.css
@@ -1,6 +1,22 @@
 .modular.header-image #header #navbar a {
   color: #000000 !important; }
 
+@font-face {
+  font-family: 'Didot-Regular';
+  src: url("../assets/fonts/Didot_gdi.eot");
+  src: url("../assets/fonts/Didot_gdi.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/Didot_gdi.woff") format("woff"), url("../assets/fonts/Didot_gdi.ttf") format("truetype"), url("../assets/fonts/Didot_gdi.svg#Didot-Regular") format("svg");
+  font-weight: 400;
+  font-style: normal;
+  font-stretch: normal;
+  unicode-range: U+0-10FFFF; }
+@font-face {
+  font-family: 'Avenir-Book';
+  src: url("../assets/fonts/Avenir-Book_gdi.eot");
+  src: url("../assets/fonts/Avenir-Book_gdi.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/Avenir-Book_gdi.woff") format("woff"), url("../assets/fonts/Avenir-Book_gdi.ttf") format("truetype"), url("../assets/fonts/Avenir-Book_gdi.svg#Avenir-Book") format("svg");
+  font-weight: 400;
+  font-style: normal;
+  font-stretch: normal;
+  unicode-range: U+0020-25CA; }
 .text-left {
   text-align: left !important; }
 
