--- a/scss/configuration/template/_typography.scss
+++ b/scss/configuration/template/_typography.scss
@@ -1,7 +1,35 @@
+// Webfonts
+
+@font-face {
+	font-family:'Didot-Regular';
+	src: url('../assets/fonts/Didot_gdi.eot');
+	src: url('../assets/fonts/Didot_gdi.eot?#iefix') format('embedded-opentype'),
+		url('../assets/fonts/Didot_gdi.woff') format('woff'),
+		url('../assets/fonts/Didot_gdi.ttf') format('truetype'),
+		url('../assets/fonts/Didot_gdi.svg#Didot-Regular') format('svg');
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0-10FFFF;
+}
+
+@font-face {
+	font-family:'Avenir-Book';
+	src: url('../assets/fonts/Avenir-Book_gdi.eot');
+	src: url('../assets/fonts/Avenir-Book_gdi.eot?#iefix') format('embedded-opentype'),
+		url('../assets/fonts/Avenir-Book_gdi.woff') format('woff'),
+		url('../assets/fonts/Avenir-Book_gdi.ttf') format('truetype'),
+		url('../assets/fonts/Avenir-Book_gdi.svg#Avenir-Book') format('svg');
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-25CA;
+}
+
 // Font Family
-$font-family-default:  			"Avenir", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-$font-family-header:  			"Didot", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+$font-family-default:  			"Avenir-Book", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+$font-family-header:  			"Didot-Regular", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
 $font-family-mono: 				"Inconsolata", monospace;
-$font-family-serif:				"Didot", "Times", "Times New Roman", serif;
+$font-family-serif:				"Didot-Regular", "Times", "Times New Roman", serif;
 
 $icons: 						"FontAwesome";
