--- a/scss/template/_blog.scss
+++ b/scss/template/_blog.scss
@@ -144,6 +144,8 @@ div#breadcrumbs {
 // Sidebar
 #sidebar {
     padding-left: 3rem;
+    background-color: $orange !important;
+
     @include breakpoint(mobile-only) {
         padding-left: 0;
     }
