--- a/scss/template/modular/_third_panel.scss
+++ b/scss/template/modular/_third_panel.scss
@@ -169,6 +169,11 @@
 	top: 0;
 	padding-bottom: 100px;
 
+	@include respond-to('small')
+	{
+		padding-bottom: 2rem;
+	}
+
 	*
 	{
 		color: $gray !important;
