--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -19,7 +19,7 @@
 
 		<div class="content-wrapper blog-content-list grid pure-g">
 			<div id="listing" class="block pure-u-2-3">
-				{% for child in collection %}
+				{% for child in taxonomy.findTaxonomy({ 'category': 'main' }) %}
 			        {% include 'partials/blog_item.html.twig' with {'blog':page, 'page':child, 'truncate':true} %}
 			    {% endfor %}
 
