--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -19,8 +19,8 @@
 
 		<div class="content-wrapper blog-content-list grid pure-g">
 			<div id="listing" class="block pure-u-2-3">
-				{% for child in taxonomy.findTaxonomy({ 'category': 'main' }) %}
-			        {% include 'partials/blog_item.html.twig' with {'blog':page, 'page':child, 'truncate':true} %}
+				{% for child in page.collection %}
+			        {% include 'partials/blog_item.html.twig' with {'blog':page, 'page':child, 'truncate':false} %}
 			    {% endfor %}
 
                 {% if config.plugins.pagination.enabled and collection.params.pagination %}
