Limit length of services callout quote to allow for line break after 'brand'

--- a/css-compiled/nucleus.css
+++ b/css-compiled/nucleus.css
@@ -520,7 +520,7 @@ th {
     -moz-flex-flow: inherit;
     flex-flow: inherit; } }
 body {
-  font-size: 1rem;
+  font-size: 14pt;
   line-height: 1.7; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -537,7 +537,7 @@ h3 {
   font-size: 2.1rem; }
 
 h4 {
-  font-size: 1rem; }
+  font-size: 14pt; }
 
 h5 {
   font-size: 1.35rem; }
