--- a/scss/template/modular/_first_panel.scss
+++ b/scss/template/modular/_first_panel.scss
@@ -1,3 +1,41 @@
+.down-carat
+{
+	background: url('../images/down-caret.svg') no-repeat center center;
+	background-size: 100%;
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	bottom: 50px;
+	margin-left: 48.8%;
+	margin-right: -50%;
+	opacity: 0.7;
+	// animation: floating 1.5s infinite;
+}
+
+@keyframes floating {
+	0% {
+		transform: translateY(0%);	
+	}
+	50% {
+		transform: translateY(50%);	
+	}	
+	100% {
+		transform: translateY(0%);
+	}			
+}
+
+@-webkit-keyframes floating {
+	0% {
+		-webkit-transform: translateY(0%);	
+	}
+	50% {
+		-webkit-transform: translateY(50%);	
+	}	
+	100% {
+		-webkit-transform: translateY(0%);
+	}			
+}
+
 .cover
 {
 	display: flex;
@@ -5,12 +43,13 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
+	position: relative;
 
 	h1
 	{
-		font-size: 70pt;
+		font-size: 80pt;
 		letter-spacing: initial;
-		margin-left: 7rem;
+		margin-left: 9rem;
 
 		@include respond-to('small')
 		{
@@ -22,13 +61,14 @@
 		{
 			display: block;
 			content: '';
-			height: 300px;
-			width: 300px;
+			height: 350px;
+			width: 350px;
 			background: url('../images/glasses.svg') no-repeat center center;
 			position: absolute;
 			transform: rotate(50deg);
-			top: -53px;
-			right: -125px;
+			top: -57px;
+			right: -215px;
+			background-size: 100%;
 
 			@include respond-to('small')
 			{
