--- a/css-compiled/template.css
+++ b/css-compiled/template.css
@@ -961,30 +961,38 @@ ul.pagination {
   align-items: center;
   width: 100%;
   position: relative; }
+  @media (max-width: 450px) {
+    .cover {
+      height: 50vh; } }
   .cover h1 {
-    font-size: 120pt;
+    font-size: 100pt;
     letter-spacing: initial;
-    margin-left: 2rem; }
+    margin-left: 2rem;
+    min-width: 800px;
+    max-width: 100vw; }
     @media (max-width: 450px) {
       .cover h1 {
         font-size: 30pt;
-        margin-left: 2rem; } }
+        margin-left: 2rem;
+        text-align: left; } }
     .cover h1:after {
       display: block;
       content: '';
-      height: 450px;
-      width: 450px;
+      height: 420px;
+      width: 420px;
       background: url("../images/glasses.svg") no-repeat center center;
       position: absolute;
       transform: rotate(50deg);
-      top: 58px;
-      right: -259px;
+      top: 48px;
+      right: -219px;
       background-size: 100%; }
       @media (max-width: 450px) {
         .cover h1:after {
           background-size: 120px;
-          top: -108px;
-          right: 81px; } }
+          top: 54px;
+          right: -9px;
+          height: 200px;
+          width: 200px; } }
   .cover h3 {
     display: inline-block; }
     @media (max-width: 450px) {
@@ -1003,6 +1011,9 @@ ul.pagination {
     top: 0;
     background: transparent;
     left: 0%; }
+    @media (max-width: 450px) {
+      .cover .modular-row {
+        max-width: 100vw; } }
   .cover .header-boxes {
     flex-grow: 1;
     flex-shrink: 1;
@@ -1015,7 +1026,10 @@ ul.pagination {
     font-weight: 300; }
   .cover .header-box:first-of-type {
     background-color: #f9402c;
-    flex-grow: 1; }
+    width: 340px; }
+    @media (max-width: 450px) {
+      .cover .header-box:first-of-type {
+        width: 130px; } }
   .cover .header-box:last-of-type {
     background-color: #fff;
     flex-grow: 2.5; }
@@ -1054,7 +1068,7 @@ ul.pagination {
       .details h4 {
         font-size: 1rem; } }
   .details ul {
-    padding-left: 0; }
+    padding-left: 20px; }
 
 .services {
   color: #fff !important; }
@@ -1111,6 +1125,9 @@ ul.pagination {
       display: inline-block;
       margin: 1.5rem 0;
       text-transform: uppercase; }
+      @media (max-width: 450px) {
+        .services-buttons .services-button h4 {
+          font-size: 9pt; } }
     .services-buttons .services-button.active {
       background-color: #fff;
       color: #585758; }
@@ -1145,7 +1162,8 @@ ul.pagination {
     width: 1000px; }
     @media (max-width: 450px) {
       .services-callout-panel h2 {
-        font-size: 1.5rem; } }
+        font-size: 1.5rem;
+        width: 100vw; } }
   .services-callout-panel.active {
     display: block; }
 
@@ -1239,8 +1257,7 @@ ul.pagination {
       .about .modular-row {
         padding: 2rem; } }
   .about ul {
-    list-style-type: none;
-    padding-left: 0; }
+    padding-left: 20px; }
   .about li {
     margin-bottom: 1.5rem; }
 
