--- a/scss/template/modular/_first_panel.scss
+++ b/scss/template/modular/_first_panel.scss
@@ -20,36 +20,47 @@
 	width: 100%;
 	position: relative;
 
+	@include respond-to('small')
+	{
+		height: 50vh;
+	}
+
 	h1
 	{
-		font-size: 120pt;
+		font-size: 100pt;
 		letter-spacing: initial;
 		margin-left: 2rem;
+		min-width: 800px;
+		max-width: 100vw;
 
 		@include respond-to('small')
 		{
 			font-size: 30pt;
 			margin-left: 2rem;
+			text-align: left;
+
 		}
 
 		&:after
 		{
 			display: block;
 			content: '';
-			height: 450px;
-			width: 450px;
+			height: 420px;
+			width: 420px;
 			background: url('../images/glasses.svg') no-repeat center center;
 			position: absolute;
 			transform: rotate(50deg);
-			top: 58px;
-			right: -259px;
+			top: 48px;
+			right: -219px;
 			background-size: 100%;
 
 			@include respond-to('small')
 			{
 				background-size: 120px;
-				top: -108px;
-				right: 81px;
+				top: 54px;
+				right: -9px;
+				height: 200px;
+				width: 200px;
 			}
 		}
 	}
@@ -83,6 +94,11 @@
 		top: 0;
 		background: transparent;
 		left: 0%;
+
+		@include respond-to('small')
+		{
+			max-width: 100vw;
+		}
 	}
 
 	.header-boxes
@@ -104,7 +120,12 @@
 	.header-box:first-of-type
 	{
 		background-color: $orange;
-		flex-grow: 1;
+		width: 340px;
+
+		@include respond-to('small')
+		{
+			width: 130px;
+		}
 	}
 
 	.header-box:last-of-type
