--- a/scss/template/modular/_third_panel.scss
+++ b/scss/template/modular/_third_panel.scss
@@ -47,7 +47,6 @@
 
 	ul
 	{
-		// padding-bottom: 6rem;
 		padding: 2rem 10rem 4rem 10rem;
 
 		@include respond-to('small')
@@ -60,10 +59,6 @@
 		}
 	}
 
-	// h2, ul
-	// {
-	// 	padding-left: 6rem;
-	// }
 }
 
 .services-buttons
@@ -97,6 +92,11 @@
 			display: inline-block;
 			margin: 1.5rem 0;
 			text-transform: uppercase;
+
+			@include respond-to('small')
+			{
+				font-size: 9pt;
+			}
 		}
 
 		&.active
@@ -155,6 +155,7 @@
 		@include respond-to('small')
 		{
 			font-size: 1.5rem;
+			width: 100vw;
 		}
 	}
 
