--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -35,6 +35,7 @@
         {% do assets.addJs('theme://js/antimatter.js') %}
         {% do assets.addJs('theme://js/slidebars.min.js') %}
         {% do assets.addJs('theme://js/tgr_main.js') %}
+        {% do assets.addJs('theme://js/flowtype.js') %}
     {% endblock %}
     {{ assets.js() }}
 
